--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@use-expo/font": "^2.0.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
