--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-classnames": "^0.1.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux-thunk": "^2.3.0"
