--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-moment": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-classnames": "^0.1.1",
     "react-native-web": "~0.13.12",
