--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.0.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.0.0",
