--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@use-expo/font": "^2.0.0",
     "expo": "~39.0.2",
+    "expo-av": "^8.6.0",
     "expo-status-bar": "~1.0.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
